syntax = "proto3";

package common;

option go_package = "github.com/dominant-strategies/go-quai/common";

message ProtoLocation { bytes value = 1; }

message ProtoHash { bytes value = 1; }
